Fix booker link
Signed-off-by: Gaurav Munjal <Gaurav0@aol.com>

--- a/js/templates/index.html
+++ b/js/templates/index.html
@@ -1,6 +1,6 @@
         <header>
             <img src="images/photo.jpg" width="100px" height="117px">
-            <p>Hi, my name is Gaurav Munjal. I&rsquo;m a front end web developer at <a href="www.booker.com">Booker Software</a>. And I <em>love</em> software development.</p>
+            <p>Hi, my name is Gaurav Munjal. I&rsquo;m a front end web developer at <a href="http://www.booker.com">Booker Software</a>. And I <em>love</em> software development.</p>
         </header>
         <p class="list-header">I have a diverse background:</p>
         <ul>
