Add (somewhat) responsive stylesheet. (Still optimized for desktop)
Signed-off-by: Gaurav Munjal <Gaurav0@aol.com>

--- a/js/templates/app.html
+++ b/js/templates/app.html
@@ -7,7 +7,9 @@
         </nav>
 		{{outlet}}
 		<footer>
-            <img src="images/mail.png" width="20px" height="15px"> Gaurav0 at aol dot com
-            <a href="http://www.linkedin.com/pub/gaurav-munjal/4/245/722"><img src="images/linkedin.png" width="16px" height="16px"> LinkedIn</a>
-            <a href="https://github.com/gaurav0"><img src="images/github.png"" width="20px" height="16px"> Github</a>
+			<ul>
+				<li><img src="images/mail.png" width="20px" height="15px"> Gaurav0 at aol dot com</li>
+				<li><a href="http://www.linkedin.com/pub/gaurav-munjal/4/245/722"><img src="images/linkedin.png" width="16px" height="16px"> LinkedIn</a></li>
+				<li><a href="https://github.com/gaurav0"><img src="images/github.png"" width="20px" height="16px"> Github</a></li>
+			</ul>
         </footer>
