--- a/js/templates/resume.html
+++ b/js/templates/resume.html
@@ -1,4 +1,5 @@
         <p class="download">Download this resume as: <a href="gaurav-munjal-resume-13.doc">Word</a> <a href="gaurav-munjal-resume-13.pdf">PDF</a></p>
+		<p class="please">Please print the Word or PDF version of this resume, available for download at http://gaurav0.github.io/#/resume</p>
         <div id="resume">
             <header>
                 Gaurav Munjal<br>
