--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,10 @@ body {
     background-color: #eeffdd;
     font-family: Lato, sans-serif;
     font-size: 12pt;
-    width: 750px;
+	padding-left: 50px;
+	padding-right: 50px;
+    max-width: 750px;
+	min-width: 300px;
     margin: auto;
 }
 
@@ -90,7 +93,6 @@ footer {
     border-color: #cccc99;
     margin-top: 40px;
     padding-top: 30px;
-    padding-left: 60px;
 }
 
 footer ul {
@@ -99,11 +101,11 @@ footer ul {
 
 footer ul li {
     display: inline;
+    padding: 8%;
 }
 
 footer a {
-    padding: 40px;
-    margin: 40px;
+	white-space: nowrap;
 }
 
 footer img {
@@ -118,6 +120,7 @@ footer img {
     text-align: left;
     vertical-align: top;
     width: 35%;
+	padding-right: 25px;
 }
 
 .headline {
@@ -168,4 +171,80 @@ footer img {
     font-style: italic;
     margin-bottom: 0;
     margin-top: 0;
+}
+
+.please {
+	display: none;
+}
+
+@media screen and (max-width: 800px) {
+
+	footer ul li {
+		display: block;
+		margin: 18px auto;
+		padding: 0;
+	}
+	
+	ul.tiles {
+		display: block;
+		margin: 50px;
+	}
+	
+	ul.tiles li {
+		display: block;
+		margin: 50px 0;
+		text-align: left;
+	}
+	
+	table tr td, table tr th {
+		display: block;
+		text-align: left;
+	}
+	
+	.headline td:last-child {
+		text-align: left;
+	}
+}
+
+@media screen and (max-width: 500px) {
+
+	nav ul li {
+		display: block;
+		padding: 16px 0;
+		margin: 0;
+		border-style: solid;
+		border-width: 0;
+		border-bottom-width: 1px;
+		border-color: #cccc99;
+		margin-bottom: 20px;
+		margin-top: 30px;
+	}
+	
+	nav {
+		border-width: 0;
+		padding-bottom: 20px;
+	}
+	
+	nav ul {
+		padding-left: 0;
+	}
+}
+
+@media print {
+
+	nav {
+		display: none;
+	}
+	
+	footer {
+		display: none;
+	}
+	
+	.download {
+		display: none;
+	}
+	
+	.please {
+		display: block;
+	}
 }
