Update to Ember 1.0.0, Ember-Data 1.0 beta
Signed-off-by: Gaurav Munjal <Gaurav0@aol.com>

--- a/js/templates/projects.html
+++ b/js/templates/projects.html
@@ -1,7 +1,7 @@
         <h1>Projects</h1>
 		<ul class="tiles">
-			{{#each controller}}
-			<li>{{#linkTo project this}}<img {{bindAttr src="thumb"}}><br>{{title}}{{/linkTo}}</li>
+			{{#each controller.arrangedContent}}
+			<li>{{#link-to 'project' this}}<img {{bindAttr src="thumb"}}><br>{{title}}{{/link-to}}</li>
 			{{/each}}
 		</ul>
 		{{outlet}}
