--- a/js/templates/resume.html
+++ b/js/templates/resume.html
@@ -6,7 +6,7 @@
                 13-34 139 St<br>
                 Whitestone, NY 11357<br>
                 718-746-1687<br>
-                http://gaurav.github.io
+                http://gaurav0.github.io
             </header>
             <h1>Skills</h1>
             <table id="skills">
@@ -20,7 +20,7 @@
                 </tr>
                 <tr>
                     <th>Technologies</th>
-                    <td>HTML5, Node.js, Express, Socket.IO, Django, JQuery, Ember.js, ASP.Net, ASP, JSP, Servlets, Swing, JUnit, COM</td>
+                    <td>HTML5, CSS3, Node.js, Express, Socket.IO, Django, JQuery, Ember.js, ASP.Net, ASP, JSP, Servlets, Swing, JUnit, COM</td>
                 </tr>
                 <tr>
                     <th>Databases</th>
@@ -35,25 +35,6 @@
                     <td>Web, Windows, Linux, Android</td>
                 </tr>
             </table>
-            <h1>Education</h1>
-            <table class="headline">
-                <tr>
-                    <td>City College of New York</td>
-                    <td>Computer Engineering</td>
-                    <td>(3.8 GPA)</td>
-                    <td>Sep. 2010 – Present</td>
-                </tr>
-            </table>
-            <p class="subdesc">Activities: Tau Beta Pi, Eta Kappa Nu, Golden Key, IEEE, President Access Futures Club 2011-2012, President ACM 2012-2013</p>
-            <table class="headline">
-                <tr>
-                    <td>Cooper Union</td>
-                    <td>Electrical Engineering</td>
-                    <td>(109.5 credits)</td>
-                    <td>July 1994 – May 1998</td>
-                </tr>
-            </table>
-            <ul><li>Awarded Full Scholarship</li></ul>
             <h1>Work Experience</h1>
             <table class="headline">
                 <tr>
@@ -64,6 +45,7 @@
             </table>
 			<ul>
 				<li>Worked on Calendar and Customer Flow web applications using C# ASP.Net and Ember.js</li>
+                <li>Implemented Real Time Calendar Updates using websockets, Node.js, and Socket.IO</li>
 			</ul>
             <table class="headline">
                 <tr>
@@ -73,7 +55,8 @@
                 </tr>
             </table>
             <ul>
-                <li>Developed custom themes and plugins for Wordpress using PHP.</li>
+                <li>Developed custom themes and plugins for Wordpress using PHP, HTML5, CSS3 and JavaScript.</li>
+                <li>Delivered customizable single page web applications with responsive design.</li>
             </ul>
             <table class="headline">
                 <tr>
@@ -86,8 +69,8 @@
                 <li>Analyzed utilization, financial, and cost information from both hospital and external sources.</li>
                 <li>Synthesized it into user comprehensible reports in MS Excel to support financial and operational decisions.</li>
                 <li>Estimated hospital revenue and costs using financial models such as CMI and RCC.</li>
-                <li>Provided financial and operational reports to senior management for decision making and strategic planning.</li>
-                <li>Audited utilization records for accuracy, and watched for variance and trends in utilization.</li>
+                <!--<li>Provided financial and operational reports to senior management for decision making and strategic planning.</li>
+                <li>Audited utilization records for accuracy, and watched for variance and trends in utilization.</li>-->
                 <li>Automated the production of daily, weekly, and monthly statistical reports using clinical and operational data.</li>
                 <li>Developed and maintained tables, queries, and reports in Model 204 / SDSM (TSI), along with VBA macros.</li>
             </ul>
@@ -119,6 +102,24 @@
                 <li>Integrated third party XML based web services for address verification and shipping information.</li>
                 <li>Achieved savings of $200,000 per year by eliminating data entry and order processing costs.</li>
             </ul>
+            <h1>Education</h1>
+            <table class="headline">
+                <tr>
+                    <td>City College of New York</td>
+                    <td>Computer Engineering</td>
+                    <td>Sep. 2010 – Present</td>
+                </tr>
+            </table>
+            <p class="subdesc">Activities: Tau Beta Pi, Eta Kappa Nu, Golden Key, IEEE, President Access Futures Club 2011-2012, President ACM 2012-2013</p>
+            <table class="headline">
+                <tr>
+                    <td>Cooper Union</td>
+                    <td>Electrical Engineering</td>
+                    <td>(109.5 credits)</td>
+                    <td>July 1994 – May 1998</td>
+                </tr>
+            </table>
+            <ul><li>Awarded Full Scholarship</li></ul>
             <!--
             <table class="headline">
                 <tr>
