--- a/js/templates/resume.html
+++ b/js/templates/resume.html
@@ -5,7 +5,7 @@
                 Gaurav Munjal<br>
                 13-34 139 St<br>
                 Whitestone, NY 11357<br>
-                718-746-1687<br>
+                (917) 699-7415<br>
                 http://gaurav0.github.io
             </header>
             <h1>Skills</h1>
@@ -46,6 +46,7 @@
 			<ul>
 				<li>Worked on Calendar and Customer Flow web applications using C# ASP.Net and Ember.js</li>
                 <li>Implemented Real Time Calendar Updates using websockets, Node.js, and Socket.IO</li>
+                <li>Created custom Ember.js animated user interface components using CSS3 and JavaScript.</li>
 			</ul>
             <table class="headline">
                 <tr>
@@ -100,7 +101,6 @@
                 <li>Developed online administration tools to securely edit the website and database remotely.</li>
                 <li>Integrated a commercially available COM object for real time credit card processing.</li>
                 <li>Integrated third party XML based web services for address verification and shipping information.</li>
-                <li>Achieved savings of $200,000 per year by eliminating data entry and order processing costs.</li>
             </ul>
             <h1>Education</h1>
             <table class="headline">
