Update for new job at Red Owl Analytics
Signed-off-by: Gaurav Munjal <Gaurav0@aol.com>

--- a/js/templates/index.html
+++ b/js/templates/index.html
@@ -1,6 +1,6 @@
         <header>
             <img src="images/photo.jpg" width="100px" height="117px">
-            <p>Hi, my name is Gaurav Munjal. I&rsquo;m a front end web developer at <a href="http://www.booker.com">Booker Software</a>. And I <em>love</em> software development.</p>
+            <p>Hi, my name is Gaurav Munjal. I&rsquo;m a software engineer at <a href="http://www.redowlanalytics.com">Red Owl Analytics</a>. And I <em>love</em> software development.</p>
         </header>
         <p class="list-header">I have a diverse background:</p>
         <ul>
@@ -20,4 +20,11 @@
             <li>I was the technical lead both at work and on several group {{#linkTo 'projects'}}projects{{/linkTo}}.</li>
             <li>I was president of the Access Futures Club at CCNY from 2011-2012, bringing awareness of people with disabilities. We won the Club of the Year Award at CCNY.</li>
             <li>I was president of the <a href="http://ccny.acm.org">CCNY Chapter</a> of <a href="http://acm.org">ACM</a>. I organized our first Game Jam.</li>
+        </ul>
+        <p class="list-header">I am an expert with Ember.js:</p>
+        <ul>
+            <li>This website was created with Ember.js, Ember Data, and Ember CLI.</li>
+            <li>I am currently writing an <a href="http://github.com/Gaurav0/ember-cli-jquery-ui">addon</a> for Ember CLI.</li>
+            <li>I am a contributer to the Ember core and the Ember CLI projects.</li>
+            <li>I am active in the Ember.js community and the Ember.js NYC Meetup group.</li>
         </ul>
