--- a/js/templates/resume.html
+++ b/js/templates/resume.html
@@ -12,7 +12,7 @@
             <table id="skills">
                 <tr>
                     <th>Programming Languages</th>
-                    <td>JavaScript, Java, VB.Net, VB6, C#, C, C++, PHP, Python, Oracle PL/SQL, x86 Assembly, VBScript, VBA</td>
+                    <td>JavaScript, CoffeeScript, Java, VB.Net, VB6, C#, C, C++, PHP, Python, Oracle PL/SQL, x86 Assembly, VBScript, VBA</td>
                 </tr>
                 <tr>
                     <th>Other Computer Languages</th>
@@ -20,7 +20,7 @@
                 </tr>
                 <tr>
                     <th>Technologies</th>
-                    <td>HTML5, CSS3, Node.js, Express, Socket.IO, Django, JQuery, Ember.js, ASP.Net, ASP, JSP, Servlets, Swing, JUnit, COM</td>
+                    <td>HTML5, CSS3, Ember.js, Node.js, Express, Socket.IO, D3, Django, JQuery, ASP.Net, ASP, JSP, Servlets, Swing, JUnit, COM</td>
                 </tr>
                 <tr>
                     <th>Databases</th>
@@ -28,7 +28,7 @@
                 </tr>
                 <tr>
                     <th>Development Software</th>
-                    <td>Eclipse, Visual Studio, SQL*Plus, Matlab</td>
+                    <td>WebStorm, IntelliJ, Eclipse, Visual Studio, SQL*Plus, Matlab</td>
                 </tr>
                 <tr>
                     <th>Platforms</th>
@@ -38,9 +38,21 @@
             <h1>Work Experience</h1>
             <table class="headline">
                 <tr>
+                    <td>Red Owl Analytics</td>
+                    <td>Software Engineer</td>
+                    <td>Aug. 2014 – Present</td>
+                </tr>
+            </table>
+			<ul>
+				<li>Worked on the REVEAL Big Data analytics platform using Node.js, Ember.js, CoffeeScript, and D3.</li>
+                <li>Implemented advanced data visualizations including heat maps and behavioral curves.</li>
+                <li>Updated data in real time using the Ember websockets adapter.</li>
+			</ul>
+            <table class="headline">
+                <tr>
                     <td>Booker Software</td>
                     <td>Front End Web Developer</td>
-                    <td>June 2013 – Present</td>
+                    <td>June 2013 – July 2014</td>
                 </tr>
             </table>
 			<ul>
